--- a/_includes/UI/slider/container/display.html
+++ b/_includes/UI/slider/container/display.html
@@ -77,7 +77,7 @@
         <a  href="{{site.baseurl}}{{include.page_ref_url}}">
       {% endif %}
 
-        <h3 class="heading">{{include.header}}--</h3>
+        <h3 class="heading">{{include.header}}</h3>
 
       {% if include.add_url_to_header == true %}
         </a>
