--- a/_includes/picture/slider-standard-article.html
+++ b/_includes/picture/slider-standard-article.html
@@ -3,8 +3,9 @@
   param in :
     include      
       image
-      description
-      url
+      description_image
+      link
+      description_link
  -->
 {%endcomment%}
 
@@ -12,23 +13,22 @@
 {% comment %}
 {% include scss-liquid/optim/class.html class_gl='info_gl' %}    
 <div class="{{class_gl}}">
-  <h3>{{include.description-image}}</h3>
+  <h3>{{include.description_image}}</h3>
 </div>
 {% endcomment %}
-{% if include.url != null and include.url != '' %}
-  <a href="{{site.baseurl}}{{include.url}}" title="{{include.description-url}}">
+{% if include.link != null and include.link != '' %}
+  <a href="{{site.baseurl}}{{include.link}}" title="{{include.description_link}}">
 {% endif %}
-
   {% if input_slider.img_source == site.data.scss_liquid.UI.slider.config.type_img_source.original %}
-    {% picture slider-home {{include.image}} alt="{{include.description-image}}" %}
+    {% picture slider-home {{include.image}} alt="{{include.description_image}}" %}
 
   {% elsif input_slider.img_source == site.data.scss_liquid.UI.slider.config.type_img_source.baseurl  %}
-    <img src="{{site.baseurl}}/images/{{include.image}}" alt="{{include.description-image}}">
+    <img src="{{site.baseurl}}/images/{{include.image}}" alt="{{include.description_image}}">
 
   {% elsif input_slider.img_source == site.data.scss_liquid.UI.slider.config.type_img_source.direct_url %}
-    <img src="{{include.image}}" alt="{{include.description-image}}">
+    <img src="{{include.image}}" alt="{{include.description_image}}">
   {% endif %}
 
-{% if include.url != null and include.url != '' %}
+{% if include.link != null and include.link != '' %}
   </a>
 {% endif %}
