--- a/_includes/picture/slider-standard.html
+++ b/_includes/picture/slider-standard.html
@@ -3,8 +3,9 @@
 param in :
   include.input_slider
   include.list_image
-  include.list_description
-  include.list_url
+  include.list_description_image
+  include.list_link
+  include.list_description_link
 
 variable globale
 
@@ -67,12 +68,12 @@ param out:
 {% if include.list_image != null and include.list_image != delim  %}
   {% assign add_list_from_collection = true %}
   {% assign array_image_slider = include.list_image | remove_first: delim | split: delim  %}
+  {% assign array_description_img_slider = include.list_description_image | remove_first: delim | split: delim  %}
+  {% assign array_link_slider = include.list_link | remove_first: delim | split: delim  %}
+  {% assign array_description_link_slider = include.list_description_link | remove_first: delim | split: delim  %}
 
   {% assign array_image_slider_size = array_image_slider.size | minus: 1 %}
   {% assign dim_slider = array_image_slider.size  %}
-
-  {% assign array_description_slider = include.list_description | remove_first: delim | split: delim  %}
-  {% assign array_url_slider = include.list_url | remove_first: delim | split: delim  %}
 {% endif %}
 
 
@@ -146,8 +147,9 @@ param out:
 
       {% include picture/slider-standard-article.html 
         image=item.image
-        description=item.description
-        url=item.url
+        description_image=item.description-image
+        link=item.link
+        description_link=item.description-link
       %}    
     </article>
     {% include UI/slider/article/display.html before=false current_style=null %}
@@ -157,8 +159,9 @@ param out:
 
   {% for iter_array in (0..array_image_slider_size) %}
     {% assign image_tmp = array_image_slider[iter_array]  %}
-    {% assign description_tmp = array_description_slider[iter_array]  %}
-    {% assign url_tmp = array_url_slider[iter_array] %} 
+    {% assign description_img_tmp = array_description_img_slider[iter_array]  %}
+    {% assign link_tmp = array_link_slider[iter_array] %} 
+    {% assign description_link_tmp = array_description_link_slider[iter_array] %}    
 
     {% if forloop.first %}
       {% assign current_style = config_slide.style_item_first %}
@@ -170,8 +173,9 @@ param out:
     <article> 
       {% include picture/slider-standard-article.html 
         image=image_tmp
-        description=description_tmp
-        url=url_tmp
+        description_image=description_img_tmp
+        link=link_tmp
+        description_link=description_link_tmp
       %}    
     </article>
     {% include UI/slider/article/display.html before=false current_style=null %}
