--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,8 @@
    {%comment%}<!-- font, blocage pour pagespeed , report directly in critical.css.scss-->{%endcomment%}
   {%comment%}<!--  <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Serif:400,700,400italic&subset=latin' rel='stylesheet' type='text/css'>
  -->{%endcomment%}
+    {%comment%}<!-- font-awesome.min.css, blocage pour pagespeed , need report directly in critical.css.scss-->{%endcomment%}
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" async defer>
 
 
