--- a/_assets/stylesheets/components/navigation-home.scss
+++ b/_assets/stylesheets/components/navigation-home.scss
@@ -36,6 +36,11 @@
 
 }
 
+.navigation a:hover{
+  color: $secondary-text-color;
+  font-weight: bold;
+}
+
 // .navigation a:hover, a:visited{
 // }
 
@@ -69,7 +74,7 @@
   font-weight: bold;
   // font-size: 2em;
   // line-height: 1em;
-  color : $primary-text-color;
+  color : $secondary-text-color;
 
   // underline effect
   &:before {
@@ -79,7 +84,7 @@
     bottom: -2px;
     height: 4px;
     width: 100%;
-    background-color: $primary-text-color;
+    background-color: $secondary-text-color;
     transition: all 300ms cubic-bezier(0.325, -0.075, 0, 1.65);
     transform: scaleX(0); // hide
   }
