--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -1,7 +1,11 @@
 <div class=" Header-home" role="banner">
  <ul class="Grid Grid--flexCells ">
     <li class="Grid-cell   u-full u-med-full u-large-full ">
-      {% picture logo-home logo-header.jpg alt=" Logo La Case Bio, mangez bio!" %}
+      {% comment %}{% picture logo-home logo-header.jpg alt=" Logo La Case Bio, mangez bio!" %}{% endcomment %}
+
+      {% picture logo-home logoheader-lcb.jpg alt=" Logo La Case Bio, mangez bio!" %}
+
+      
     </li>
   </ul>
 </div>
