--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,10 +8,10 @@ layout: compress
   {% include head.html %}
 
   <body class="Site-body container-body">
-
+{% comment %}
     <header id='header-default' class="Site-header header--fixed">
         {% include header-default.html %}
-    </header>
+    </header>{% endcomment %}
 
     <div class="Site-header-home">
         {% include header-home.html %}
@@ -33,28 +33,54 @@ layout: compress
             {{ content }}
         </div>
 
-        <aside class="Site-right-aside">
-          <div class="sticky-aside-right">
+        <!-- <aside class="Site-right-aside"> -->
+          <!-- <div class="sticky-aside-right"> -->
+            <!-- <div class="Message Ouverture">
+              <ul class='message-list-aside-right'>
+                <li><h4>Le Lundi</h4> </li>
+                <li class="on-md-only">:</li>
+                <li>15H - 19h15 </li>                
+              </ul>
+            </div>
             <div class="Message Ouverture">
               <ul class='message-list-aside-right'>
-                <!-- <li class="on-md-only">Ouverture: </li> -->
-                <li><h4>Du Mardi au Samedi</h4> </li>
+                <li><h4>Du Mardi au Jeudi</h4> </li>
                 <li class="on-md-only">:</li>
                 <li>9H - 12h30 </li>
                 <li class="on-md-only">/</li>
                 <li>15H - 19h15</li>
               </ul>
             </div>
-            <div class="Message Warning invisible">
-              <ul id="aside-fermeture" class='message-list-aside-right ' ></ul>
+            <div class="Message Ouverture">
+              <ul class='message-list-aside-right'>
+                <li><h4>Le Vendredi</h4> </li>
+                <li class="on-md-only">:</li>
+                <li>9H - 12h30 </li>
+                <li class="on-md-only">/</li>
+                <li>14H - 19h15</li>                
+              </ul>
             </div>
-          </div>
+            <div class="Message Ouverture">
+              <ul class='message-list-aside-right'>
+                <li><h4>Le Samedi</h4> </li>
+                <li class="on-md-only">:</li>
+                <li>9H - 13h </li>
+                <li class="on-md-only">/</li>
+                <li>15H - 19h</li>                
+              </ul>
+            </div> -->
+
+            <!-- </div> -->
+            <!-- <div class="Message Warning invisible">
+              <ul id="aside-fermeture" class='message-list-aside-right ' ></ul>
+            </div> -->
+          <!-- </div> -->
          <!--  <div class="Message Info">
               <ul iclass='message-list-aside-right'>
                 <li><h4>Evenements à venir :</h4> </li>
               </ul>
             </div> -->
-        </aside>
+        <!-- </aside> -->
 
       </div> <!-- fin Site-content-right-aside -->
 
