--- a/_assets/stylesheets/components/navigation-home.scss
+++ b/_assets/stylesheets/components/navigation-home.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-flow: column wrap;
   text-align: center;
-  @include breakpoint($break-ssm-max){text-align: left;}
+  // @include breakpoint($break-ssm-max){text-align: left;}
 
 }
 
