--- a/_assets/stylesheets/components/grid.scss
+++ b/_assets/stylesheets/components/grid.scss
@@ -26,6 +26,9 @@
   align-items: center;
 }
 
+.Grid--justifyStart {
+  justify-content: flex-start;
+}
 .Grid--justifyCenter {
   justify-content: center;
 }
