--- a/_assets/stylesheets/critical.css.scss.liquid
+++ b/_assets/stylesheets/critical.css.scss.liquid
@@ -28,6 +28,7 @@
 {% comment %}@import 'components/header-nav-target';{% endcomment %}
 {% comment %}@import 'components/navigation-home';{% endcomment %}
 {% comment %}@import 'components/navigation';{% endcomment %}
+@import 'components/header-nav-home';
 @import "components/list_flex_styling";
 @import "components/message";
 @import 'components/miniature';
