--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: master
 ---
 <div class="default-page-content">
 
-  {% assign home_title = site.title | prepend: "Acceuil&nbsp;" %}
+  {% comment %}{% assign home_title = site.title | prepend: "Acceuil&nbsp;" %}
   {% include coll_ext_utils/path-navig-title.html title=home_title class_logo="logo-back"%}
-
+{% endcomment %}
   {% assign size = page.excerpt.size | plus: 0 %}
   {% if size > 1 %}
     <h4>{{page.excerpt}}</h4>
