--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -9,7 +9,9 @@ layout: compress
 
   {% include head.html %}
 
-  <body class="Site-body container-body default-page">
+  <body class="Site-body container-body "> <!-- default-page -->
+  <div canvas="container">
+
     <div id="haut-page" class="u-hiddenVisually"></div>
 
     <!-- <header id='header-default' class="Site-header header--fixed">
@@ -38,5 +40,7 @@ layout: compress
 
     {% include scripts.html %}
 
+  </div>
+  <div off-canvas="id-1 left reveal">  </div>
   </body>
 </html>
