--- a/_includes/UI/list_flex/article/display.html
+++ b/_includes/UI/list_flex/article/display.html
@@ -99,7 +99,7 @@
   {% if include.extra_force_header_with_button == true %}
 
     <button class="{{include.extra_button_class_button}}"  >
-      <h3 class="{{include.extra_button_class_heading}}">{{include.header}}</h3>
+      <h3 class="{{include.extra_button_class_heading}}">{{include.header}}--header</h3>
     </button>
   {% else %}
 
