--- a/_includes/UI/slider/container/display.html
+++ b/_includes/UI/slider/container/display.html
@@ -115,7 +115,7 @@
                 {% assign item_sub = raw_items[index_item_sub] %}
 
                 <div class="miniature">
-                  <p>{{forloop.index0}}, {{index_item_sub}} : {{item_sub.title}}</p>
+                  <p>{{forloop.index0}}, {{index_item_sub}} : {{item_sub.title}}; {{item_sub.border-color}} border-colorxx</p>
                 </div>
 
               {% else %}
